syntax = "proto3";
option go_package = "github.com/Abdulrahman-Awadh/Movirate/movie";



service MovieApi{
  //here defined all the endpoints you have:)
  //we need to add search, add or delete from user favourites
  rpc GetMovies(RequestMovies) returns (ResponseMovies);
  rpc GetMovie(RequestMovies) returns (ResponseMovie);

}

message Movie{
  int32 id = 1;
  string name = 2;
  string poster = 3;
  string description = 4;
  string genre = 5;
}

message RequestMovies{
}

message ResponseMovie{
   Movie movie = 1;
}


message ResponseMovies{
  repeated Movie movie = 1;
}


